--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "openapi-rq --input http://localhost:8000/schema --output src/openapi"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.16",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@7nohe/openapi-react-query-codegen": "^2.0.0-beta.2",
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
