--- a/client/package.json
+++ b/client/package.json
@@ -14,21 +14,29 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.16",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@7nohe/openapi-react-query-codegen": "^2.0.0-beta.2",
     "@eslint/js": "^9.13.0",
+    "@hey-api/client-fetch": "^0.4.2",
+    "@tanstack/react-query-devtools": "^5.59.16",
+    "@tanstack/router-devtools": "^1.77.5",
+    "@tanstack/router-plugin": "^1.76.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "jsdom": "^25.0.1",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
