--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,25 @@
     "codegen": "openapi-rq --input http://localhost:8000/schema --output src/openapi"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.16",
-    "classnames": "^2.5.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "install": "^0.13.0",
+    "lucide-react": "^0.454.0",
+    "npm": "^10.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@7nohe/openapi-react-query-codegen": "^2.0.0-beta.2",
@@ -25,6 +40,7 @@
     "@tanstack/react-query-devtools": "^5.59.16",
     "@tanstack/router-devtools": "^1.77.5",
     "@tanstack/router-plugin": "^1.76.4",
+    "@types/node": "^22.8.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
